telepathy-haze (0.8.0-3) UNRELEASED; urgency=medium

  * Explicitly use python2 for build. The unversioned python executable is
    going away for Debian 11. Adjust the shebang accordingly. (Closes: #967216)
  * debian/control: Bump Standards-Version 4.5.1 (no further changes)
  * Drop telepathy-haze-dbg and rely on automatically built -dbgsym one

 -- Laurent Bigonville <bigon@debian.org>  Thu, 03 Dec 2020 02:03:04 +0100

telepathy-haze (0.8.0-2.1) unstable; urgency=medium

  * Non-maintainer upload, incorporating pending changes from
    pkg-telepathy git.

  [ Simon McVittie ]
  * Remove myself from Uploaders
  * d/p/purple-2.0.12.patch: add patch by Koop Mast from FreeBSD
    to fix build with recent libpurple (Closes: #824739)

  [ Jonny Lamb ]
  * Remove myself from Uploaders.

 -- Simon McVittie <smcv@debian.org>  Tue, 13 Dec 2016 21:22:54 +0000

telepathy-haze (0.8.0-2) unstable; urgency=medium

  * debian/watch: only watch for 0.x stable versions
  * Standards-Version: 3.9.5 (no changes)

 -- Simon McVittie <smcv@debian.org>  Tue, 16 Sep 2014 19:10:46 +0100

telepathy-haze (0.8.0-1) unstable; urgency=low

  * New upstream release
  * Standards-Version: 3.9.4 (no changes)
  * Canonicalize Vcs-Browser, Vcs-Git

 -- Simon McVittie <smcv@debian.org>  Wed, 02 Oct 2013 18:17:19 +0100

telepathy-haze (0.7.1-1) unstable; urgency=low

  * New upstream release (release candidate for 0.8)

 -- Simon McVittie <smcv@debian.org>  Tue, 17 Sep 2013 11:36:00 +0100

telepathy-haze (0.7.0-1) experimental; urgency=low

  * Branch for experimental
  * New upstream release
    - renames Skype prpls to something less horrible (Closes: #693456)
  * Improve long Description (Closes: #685488)
  * Switch to debhelper 9
  * Add debug symbols
  * Remove unused README.source and update-patches.mk
  * Run autoreconf during build

 -- Simon McVittie <smcv@debian.org>  Thu, 22 Nov 2012 18:25:29 +0000

telepathy-haze (0.6.0-1) unstable; urgency=low

  * New upstream release