@@ -3,8 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Debian Telepathy maintainers <pkg-telepathy-maintainers@lists.alioth.debian.org>
 Uploaders: Laurent Bigonville <bigon@debian.org>
-Build-Depends: debhelper (>= 9),
-               dh-autoreconf,
+Build-Depends: debhelper-compat (= 13),
                dpkg-dev (>= 1.16.1~),
                pkg-config (>= 0.9.0),
                python2 (>= 2.5),
